--- a/res/layout/galeri_grid.xml
+++ b/res/layout/galeri_grid.xml
@@ -15,13 +15,12 @@
             android:scaleType="centerCrop"/>
 
     <TextView
-            android:id="@+id/galeri_nama_foto"
+            android:id="@+id/galeri_tanggal_foto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp"
             android:contentDescription="@string/app_name"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:visibility="gone"/>
+            style="@android:style/TextAppearance.DeviceDefault.Medium"
+            android:textColor="#D046F2"
+            android:gravity="center"/>
 
 </LinearLayout>
