--- a/res/layout/riwayat_imunisasi.xml
+++ b/res/layout/riwayat_imunisasi.xml
@@ -152,107 +152,99 @@
                         android:padding="20dp"
                         android:scrollbars="none">
 
-                <TableLayout
-                        android:id="@+id/riwayat_imunisasi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="fill_parent"
-                        android:stretchColumns="*"
-                        android:background="@drawable/border_table">
+                    <TableLayout
+                            android:id="@+id/riwayat_imunisasi"
+                            android:layout_width="wrap_content"
+                            android:layout_height="fill_parent"
+                            android:stretchColumns="*"
+                            android:background="@drawable/border_table">
 
-                    <TableRow>
+                        <TableRow>
 
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:padding="5dp"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/jenis_vaksin"
-                                android:visibility="invisible"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:padding="5dp"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:text="@string/gerakan_halus"
+                                    android:visibility="invisible"/>
 
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:padding="5dp"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/jenis_vaksin"
-                                android:visibility="invisible"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:padding="5dp"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:text="@string/gerakan_halus"
+                                    android:visibility="invisible"/>
 
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:padding="5dp"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/jenis_vaksin"
-                                android:visibility="invisible"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:padding="5dp"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:text="@string/gerakan_halus"
+                                    android:visibility="invisible"/>
 
+                        </TableRow>
 
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:padding="5dp"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/jenis_vaksin"
-                                android:visibility="invisible"/>
-                    </TableRow>
+                        <TableRow>
 
-                    <TableRow>
+                            <TextView
+                                    android:id="@+id/text_riwayat_tanggal"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:padding="5dp"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:layout_marginRight="1dp"
+                                    android:layout_marginLeft="3dp"
+                                    android:gravity="center_vertical"
+                                    android:textColor="#FF0000"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:background="@drawable/border_row"
+                                    android:text="@string/tanggal_vaksin"/>
 
-                        <TextView
-                                android:id="@+id/text_riwayat_tanggal"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:padding="5dp"
-                                android:layout_marginTop="1dp"
-                                android:layout_marginBottom="1dp"
-                                android:layout_marginRight="1dp"
-                                android:layout_marginLeft="3dp"
-                                android:gravity="center_vertical"
-                                android:textColor="#FF0000"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:background="@drawable/border_row"
-                                android:text="@string/tanggal_vaksin"/>
-
-                        <TextView
-                                android:id="@+id/text_riwayat_jenisvaksin"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:padding="5dp"
-                                android:layout_margin="1dp"
-                                android:gravity="center_vertical"
-                                android:textColor="#FF0000"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:background="@drawable/border_row"
-                                android:text="@string/jenis_vaksin"/>
-                        <TextView
-                                android:id="@+id/text_riwayat_usia"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:layout_margin="1dp"
-                                android:padding="5dp"
-                                android:textColor="#FF0000"
-                                android:background="@drawable/border_row"
-                                android:gravity="center_vertical"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/usia_vaksin"/>
-                        <TextView
-                                android:id="@+id/text_riwayat_detail"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight=".8"
-                                android:layout_marginTop="1dp"
-                                android:layout_marginBottom="1dp"
-                                android:layout_marginLeft="1dp"
-                                android:layout_marginRight="3dp"
-                                android:background="@drawable/border_row"
-                                android:padding="5dp"
-                                android:textColor="#D046F2"
-                                style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:visibility="gone"/>
-                    </TableRow>
-                </TableLayout>
+                            <TextView
+                                    android:id="@+id/text_riwayat_jenisvaksin"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:padding="5dp"
+                                    android:layout_margin="1dp"
+                                    android:gravity="center_vertical"
+                                    android:textColor="#FF0000"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:background="@drawable/border_row"
+                                    android:text="@string/jenis_vaksin"/>
+                            <TextView
+                                    android:id="@+id/text_riwayat_usia"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:layout_margin="1dp"
+                                    android:padding="5dp"
+                                    android:textColor="#FF0000"
+                                    android:background="@drawable/border_row"
+                                    android:gravity="center_vertical"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:text="@string/usia_vaksin"/>
+                            <TextView
+                                    android:id="@+id/text_riwayat_detail"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight=".8"
+                                    android:layout_marginTop="1dp"
+                                    android:layout_marginBottom="1dp"
+                                    android:layout_marginLeft="1dp"
+                                    android:layout_marginRight="3dp"
+                                    android:background="@drawable/border_row"
+                                    android:padding="5dp"
+                                    android:textColor="#D046F2"
+                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                    android:visibility="gone"/>
+                        </TableRow>
+                    </TableLayout>
 
                 </HorizontalScrollView>
                 <!-- Start Blank Space -->
